[build-system]
requires = [
  "setuptools", "wheel",
  "PySide6",
  "jinja2",
  "dateparser"
]
build-backend = "setuptools.build_meta"

[project]
name = "pyside6-helpers"
description = "Bits of code used to facilitate PySide6 based projects"
version = "0.5.2"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
  {name = "Mr Frangipane", email = "contact@frangipane.me" }
]
maintainers = [
  {name = "Mr Frangipane", email = "contact@frangipane.me" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3 :: Only",
]
keywords = ["python", "pyside", "frangitron", "gui"]
dynamic = ["dependencies"]

[tool.setuptools]
include-package-data = true
packages = ["pyside6helpers"]

[tool.hatch.metadata]
allow-direct-references = true
