[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyside6-helpers"
description = "Bits of code used to facilitate PySide6 based projects"
version = "0.6.0"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
  {name = "Mr Frangipane", email = "contact@frangipane.me" }
]
maintainers = [
  {name = "Mr Frangipane", email = "contact@frangipane.me" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3 :: Only",
]
keywords = ["python", "pyside", "frangitron", "gui"]
dependencies = [
  "PySide6",
  "jinja2",
  "dateparser"
]

[project.urls]
Homepage = "https://github.com/mrfrangipane/pyside6-helpers"
Repository = "https://github.com/mrfrangipane/pyside6-helpers"

[tool.setuptools]
include-package-data = true
packages = ["pyside6helpers"]

[tool.hatch.metadata]
allow-direct-references = true
